build/log/idf_py_stderr_output_6127
Command: make -j 14 all
info: Default value for ESP_SLEEP_PSRAM_LEAKAGE_WORKAROUND in sdkconfig is y but it is n according to Kconfig.
Using default value from sdkconfig (y).
info: Default value for ESP_PERIPH_CTRL_FUNC_IN_IRAM in sdkconfig is y but it is n according to Kconfig.
Using default value from sdkconfig (y).
info: Default value for GDMA_CTRL_FUNC_IN_IRAM in sdkconfig is y but it is n according to Kconfig.
Using default value from sdkconfig (y).
info: Default value for FREERTOS_TASK_CREATE_ALLOW_EXT_MEM in sdkconfig is y but it is n according to Kconfig.
Using default value from sdkconfig (y).
Configuration Report                                                            
 ────────────────────────────────────────────────────────────────────────────── 
   Parser Version: 1                                                            
   Verbosity: default                                                           
   Defaults policy: sdkconfig                                                   
   Status: Finished with notifications                                          
                                                                                
  Miscellaneous                                                                 
   ──────────────────────────────────────────────────────────────────────────   
    * Trying to set symbol CACHE_L2_CACHE_LINE_64B to n, but it is currently    
    selected by choice CACHE_L2_CACHE_LINE_SIZE. For setting it to n, set       
    another choice symbol to y instead.                                         
    * Trying to set symbol PARTITION_TABLE_SINGLE_APP to n, but it is           
    currently selected by choice PARTITION_TABLE_TYPE. For setting it to n,     
    set another choice symbol to y instead.                                     
    * Trying to set symbol COMPILER_OPTIMIZATION_DEBUG to n, but it is          
    currently selected by choice COMPILER_OPTIMIZATION. For setting it to n,    
    set another choice symbol to y instead.                                     
    * Trying to set symbol CACHE_L2_CACHE_128KB to n, but it is currently       
    selected by choice CACHE_L2_CACHE_SIZE. For setting it to n, set another    
    choice symbol to y instead.                                                 
    * Trying to set symbol ESPTOOLPY_FLASHSIZE_2MB to n, but it is currently    
    selected by choice ESPTOOLPY_FLASHSIZE. For setting it to n, set another    
    choice symbol to y instead.                                                 
   ──────────────────────────────────────────────────────────────────────────   
  Default Value Mismatch                                                        
   ──────────────────────────────────────────────────────────────────────────   
    Using sdkconfig default values                                              
    Choice symbols with different default selection between sdkconfig and       
    Kconfig                                                                     
    LIBC_STDOUT_LINE_ENDING: Kconfig default selection: choice                  
    deselected, sdkconfig default selection: LIBC_STDOUT_LINE_ENDING_CRLF       
    LIBC_STDIN_LINE_ENDING: Kconfig default selection: choice deselected,       
    sdkconfig default selection: LIBC_STDIN_LINE_ENDING_CR                      
   ──────────────────────────────────────────────────────────────────────────   
 ────────────────────────────────────────────────────────────────────────────── 
/Users/a15/A_AI_Project/cardputer/tab5/tests/usb_gamepad_display_test/managed_components/espressif__esp_lcd_st7703/esp_lcd_st7703.c: In function 'esp_lcd_new_panel_st7703':
/Users/a15/A_AI_Project/cardputer/tab5/tests/usb_gamepad_display_test/managed_components/espressif__esp_lcd_st7703/esp_lcd_st7703.c:69:29: error: 'esp_lcd_panel_dev_config_t' has no member named 'color_space'
   69 |     switch (panel_dev_config->color_space) {
      |                             ^~
make[2]: *** [esp-idf/espressif__esp_lcd_st7703/CMakeFiles/__idf_espressif__esp_lcd_st7703.dir/esp_lcd_st7703.c.obj] Error 1
make[1]: *** [esp-idf/espressif__esp_lcd_st7703/CMakeFiles/__idf_espressif__esp_lcd_st7703.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [all] Error 2
